--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'com.commercehub.frontend.FrontEnd'
+mainClassName = 'com.camas.frontend.FrontEnd'
 
 repositories {
   mavenCentral()
